Fixed scrollbar visibility issue.

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
   }
   to {
     visibility: visible;
-    height: 100%;
+    height: 42rem;
   }
 }
 
@@ -16,7 +16,7 @@
   }
   to {
     visibility: visible;
-    height: 100%;
+    height: 42rem;
   }
 }
 
@@ -28,7 +28,7 @@
 @-webkit-keyframes close-drop-down {
   from {
     visibility: visible;
-    height: 100%;
+    height: 42rem;
   }
   to {
     visibility: hidden;
@@ -39,7 +39,7 @@
 @keyframes close-drop-down {
   from {
     visibility: visible;
-    height: 100%;
+    height: 42rem;
   }
   to {
     visibility: hidden;
@@ -75,8 +75,8 @@
 }
 
 .fade-in {
-  -webkit-animation: fade-in 500ms ease-in-out forwards;
-          animation: fade-in 500ms ease-in-out forwards;
+  -webkit-animation: fade-in 500ms ease-out forwards;
+          animation: fade-in 500ms ease-out forwards;
 }
 
 @-webkit-keyframes fade-out {
@@ -102,8 +102,8 @@
 }
 
 .fade-out {
-  -webkit-animation: fade-out 500ms ease-in-out forwards;
-          animation: fade-out 500ms ease-in-out forwards;
+  -webkit-animation: fade-out 500ms ease-out forwards;
+          animation: fade-out 500ms ease-out forwards;
 }
 
 html {
@@ -138,6 +138,17 @@ body.no-scroll {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+.body {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
 
 ::-webkit-scrollbar {
@@ -228,10 +239,6 @@ body.no-scroll {
           transform: rotate(-45deg);
 }
 
-.fade {
-  visibility: hidden;
-}
-
 .burger-menu {
   position: absolute;
   z-index: 1;
@@ -244,14 +251,12 @@ body.no-scroll {
 
 .burger-menu a {
   display: block;
-  opacity: 0;
-  z-index: 2;
+  visibility: hidden;
+  width: 100%;
   margin: 0 auto;
   padding: 1rem;
-  width: 100vw;
   text-align: center;
   color: #323330;
-  background-color: #FAFAFF;
   text-decoration: none;
   font-weight: 600;
 }
