--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -8,7 +8,7 @@
 
   to {
     visibility: visible;
-    height: 100%;
+    height: 42rem;
   }
 }
 
@@ -19,7 +19,7 @@
 @keyframes close-drop-down {
   from {
     visibility: visible;
-    height: 100%;
+    height: 42rem;
   }
 
   to {
@@ -29,7 +29,7 @@
 }
 
 .close-drop-down {
-animation: close-drop-down 500ms ease forwards;
+  animation: close-drop-down 500ms ease forwards;
 }
 
 @keyframes fade-in {
@@ -45,7 +45,7 @@ animation: close-drop-down 500ms ease forwards;
 }
   
 .fade-in {
-    animation: fade-in 500ms ease-in-out forwards;
+  animation: fade-in 500ms ease-out forwards;
 }
 
 @keyframes fade-out {
@@ -61,5 +61,5 @@ animation: close-drop-down 500ms ease forwards;
 }
 
 .fade-out {
-animation: fade-out 500ms ease-in-out forwards;
+  animation: fade-out 500ms ease-out forwards;
 }
