--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -29,6 +29,17 @@ body {
 
 // SCROLLBAR
 
+// Hide scrollbar for Chrome, Safari and Opera
+::-webkit-scrollbar {
+    display: none;
+}
+
+// Hide scrollbar for IE, Edge and Firefox
+.body {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
 ::-webkit-scrollbar { // Styles for the entire scrollbar.
     width: 0.625rem; // 10px
     height: 0.625rem;
